# libglacierapp

./: .gitignore  CMakeLists.txt  config.h.in  libglacierapp.pro
cmake/modules/: QtVersionCompat.cmake
examples/: CMakeLists.txt  examples.pro  glacierexample.qml  glacierexample.qrc  main.cpp
rpm/: libglacierapp.spec
src/: CMakeLists.txt  GlacierConfig.cmake.in  dbusadaptor.cpp  dbusadaptor.h  glacierapp.cpp  glacierapp.h  libglacierapp.pc.in  src.pro
tools/: CMakeLists.txt  libglacierconfig.cpp
